gitops/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-usagers
spec:
  selector: { app: app-usagers }
  ports:
    - { name: http, port: 80, targetPort: http }
